{
    "name": "PlayerActions",
    "maps": [
        {
            "name": "CarMovement",
            "id": "40df2026-2298-47cb-96b0-2c41386d89cc",
            "actions": [
                {
                    "name": "Gas",
                    "type": "Value",
                    "id": "b34fdc4d-fe6f-4703-8bdc-609dfa89d77b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Directions",
                    "type": "Value",
                    "id": "705c8ee1-c4d9-4681-a52d-b27857818769",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Break",
                    "type": "Value",
                    "id": "607d5584-2334-4ca7-bbaf-0c1ec42adbbc",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ReverseGear",
                    "type": "Value",
                    "id": "0cd3d941-8152-48ec-9c16-83f946325fbc",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "64e88e1f-6bfb-423b-916d-6bc77ddd42d3",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Gas",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "1D Axis",
                    "id": "9b98679b-36e2-4351-83d7-56152bac0a37",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Directions",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "037d23dd-5a18-492d-9e9a-0c7a28c78349",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Directions",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "8c41ec93-fdb2-43ca-8237-6515056af45f",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Directions",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "f0858351-53a6-4c0c-8113-ee62d2e2e9fa",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Break",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3d9a32b1-13ae-4d39-a4ad-2aac038fc27e",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ReverseGear",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}